--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: movie-app
-          image: venkatesh990/multibranch-flask-app:latest
+          image: venkatesh990/multibranch-flask-app:build-1
           ports:
             - containerPort: 5000
